cat now walks on different landscape map